# HanGoal

./: Dockerfile  Hangoal First Idea.drawio  Personal Statement.docx  README.md  docker-compose.yml  exam.py  functions.py  lib.npy  main.py  pStatement.txt  persistence.py  pyproject.toml  requirements.txt
HanGoal/: backup.py  calcule.py  exam.py  functions.py  gui.py  keyboardGui.py  main.py  persistence.py  phrase.py  testVerbs.py  try.py
HanGoal/local/: checks.npy  dongsa.npy  exams.npy  lib.npy
local/: checks.npy  exams.npy  lib.npy
